#
# Albany 3.0: Copyright 2016 National Technology & Engineering Solutions of
# Sandia, LLC (NTESS). This Software is released under the BSD license detailed
# in the file license.txt in the top-level Albany directory.
#
add_subdirectory(ACE)
add_subdirectory(BoreDemo)
add_subdirectory(CapModelPlasticity3D)
add_subdirectory(CohesiveElement)
add_subdirectory(CrystalPlasticity)
add_subdirectory(DTKInterp)
add_subdirectory(DomainTear2D)
add_subdirectory(Dynamics)
add_subdirectory(DynamicsTempus)
add_subdirectory(Elasticity2DTraction)
add_subdirectory(Elasticity2DTriangles)
add_subdirectory(Elasticity3DPressureBC)
add_subdirectory(EquilibriumConcentrationBC)
add_subdirectory(ExpressionEvaluatedIC)
add_subdirectory(ExpressionEvaluatedSDBC)
add_subdirectory(HeliumODEs)
add_subdirectory(HydrogenKfieldBC)
add_subdirectory(KfieldBC)
add_subdirectory(KfieldSurfaceElementNotchH2)
add_subdirectory(LinearElasticVolDev)
add_subdirectory(MaterialPointSimulator)
add_subdirectory(MechWithHydrogenFastPath)
add_subdirectory(Mechanics)
add_subdirectory(MechanicsPorePressure)
add_subdirectory(MechanicsRigidBody)
add_subdirectory(MechanicsWithHelium)
add_subdirectory(MechanicsWithHydrogen)
add_subdirectory(MechanicsWithHydrogenBar)
add_subdirectory(MechanicsWithTemperature)
add_subdirectory(Partition)
add_subdirectory(Pressure)
add_subdirectory(QuasiStaticElasticityMM3D)
add_subdirectory(RandomFracture3D)
add_subdirectory(Read_Gmsh_4_1_tet10)
add_subdirectory(RigidBody)
add_subdirectory(Schwarz)
add_subdirectory(StabilizedTet4)
add_subdirectory(StaticElasticity1D)
add_subdirectory(StaticElasticity2D)
add_subdirectory(StaticElasticity3D)
add_subdirectory(Static_Body_Force)
add_subdirectory(StrongDBC)
add_subdirectory(SurfaceElement)
add_subdirectory(SurfaceElementLocking)
add_subdirectory(SurfaceElementOrtiz)
add_subdirectory(TensionSpecimen)
add_subdirectory(ThermoElasticity2D)
add_subdirectory(ThermoMechanicalCan)
add_subdirectory(ThermoMechanicalContact)
add_subdirectory(TimeDependentSDBC)
add_subdirectory(TorsionBC)
add_subdirectory(TransientElasticity2D)
add_subdirectory(UnitTests)

# JTO 8/1/2015 deactivating HeliumDamage until model robustness issues are
# resolved add_subdirectory(HeliumDamage)

if(ALBANY_STK_PERCEPT)
  add_subdirectory(Necking3DSTKAdapt)
endif()
