# *****************************************************************
# Albany 3.0: Copyright 2016 National Technology & Engineering Solutions of
# Sandia, LLC (NTESS). This Software is released under the BSD license detailed
# in the file "license.txt" in the top-level Albany directory
# *****************************************************************

set(runtest.cmake ${CMAKE_CURRENT_SOURCE_DIR}/runtest.cmake)
add_subdirectory(Cube)
add_subdirectory(Cuboid)
